@@ -4,7 +4,7 @@
 # Client-side
 <client>
 <server>
-none
+file
 </server>
  <name>
 "upload" with file://
