@@ -8,6 +8,9 @@
 <server>
 none
 </server>
+<features>
+http
+</features>
 # tool is what to use instead of 'curl'
 <tool>
 lib504
