@@ -15,6 +15,9 @@ FAILURE
 <server>
 none
 </server>
+<features>
+http
+</features>
  <name>
 HTTP, -O with no file name part in the URL
  </name>
